tests/pass/0022_reassign_integer_literal.ee
fn main() {
    let x = 1;
    x = 5;
    debugPrint(x);
}
