tests/fail/0039_break_keyword_as_variable_name.ee
fn main() {
    let break = 1;
}
